--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Formulario de Cadastro</title>
 </head>
 <body>
-    <h1>Formulario de Cadastro</h1>
+    <h1>Formulário de cadastro</h1>
     <form>
         <label for="nome">Nome</label>
         <input id="nome"/>
