adicionando type aos id do formulario

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <h1>Formulário de cadastro</h1>
     <form>
         <label for="nome">Nome</label>
-        <input id="nome"/>
+        <input id="nome" type="text"/>
         <br/>
         <label for="e-mail">E-mail</label>
-        <input id="e-mail"/>
+        <input id="e-mail" type="email"/>
         <br/>
         <label for="senha">Senha</label>
-        <input id="senha"/>
+        <input id="senha" type="password"/>
     </form>
     <button type="submit">
         Cadastrar
